--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.apptastic</groupId>
+			<groupId>com.apptasticsoftware</groupId>
 			<artifactId>rssreader</artifactId>
-			<version>2.4.1</version>
+			<version>3.9.1</version>
 		</dependency>
 
 		<dependency>
